<resources>
    <string name="app_name">WeatherApp</string>
    <string name="placeholder">Search for a city...</string>
    <string name="city" translatable="false"></string>
    <string name="temperature" translatable="false"></string>
    <string name="wind_speed" translatable="false"></string>
    <string name="settings">Settings</string>
    <string name="use_gps_location">Use GPS location</string>
    <string name="icon_for_weather">Icon for weather</string>
    <string name="go_back_button">Go back button</string>
    <string name="weather">No weather data yet available</string>
    <string name="get_data">Get Weather Data</string>
    <string name="refresh">Refresh</string>
    <string name="use_imperial_units">Use imperial units</string>
    <string name="error">Error, please try again.</string>
    <string name="wind">Wind</string>
    <string name="default_location">tampere</string>
</resources>